--- a/Blogy.WebUI/Blogy.WebUI.csproj
+++ b/Blogy.WebUI/Blogy.WebUI.csproj
@@ -11,11 +11,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Blogy.BusinessLayer\Blogy.BusinessLayer.csproj" />
-    <ProjectReference Include="..\Blogy.DataAccesLayer\Blogy.DataAccesLayer.csproj" />
   </ItemGroup>
 
 </Project>
